crates/slopty-proto/tests/snapshots/golden__golden__client_search_replace.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
6c 00 00 00 0e 02 09 0a 7e 2f 77 2f 73 6c 6f 70
74 79 08 66 6e 20 28 5c 77 2b 29 01 01 01 02 04
2a 2e 72 73 0a 21 74 61 72 67 65 74 2f 2a 2a 02
0a 66 6e 20 24 7b 31 7d 5f 76 32 02 0b 73 72 63
2f 6d 61 69 6e 2e 72 73 cc 25 95 9a bb da c2 f0
d6 eb 18 01 0c 01 0a 73 72 63 2f 6c 69 62 2e 72
73 5a 81 80 cc 9f c2 f0 d6 eb 18 02 01 00 07 00
