crates/slopty-proto/tests/snapshots/golden__golden__client_search_start.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
2c 00 00 00 10 00 07 0a 7e 2f 77 2f 73 6c 6f 70
74 79 08 66 6e 20 28 5c 77 2b 29 01 01 01 02 04
2a 2e 72 73 0a 21 74 61 72 67 65 74 2f 2a 2a 02
