crates/slopty-proto/tests/snapshots/golden__golden__client_search_stop.snap
---
source: crates/slopty-proto/tests/golden.rs
assertion_line: 43
expression: hex(&bytes)
---
03 00 00 00 0d 01 07
