crates/slopty-proto/tests/snapshots/golden__golden__client_term_drag_enter.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
3d 00 00 00 01 10 01 02 03 04 05 06 07 08 09 0a
0b 0c 0d 0e 0f 10 10 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 d2 a6 02 01 05 61 2e 74 78 74
05 00 a4 03 00 00 00 00 00 00 01 00 05 01 05 00
00
