crates/slopty-proto/tests/snapshots/golden__golden__client_term_drop.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
3b 00 00 00 01 10 01 02 03 04 05 06 07 08 09 0a
0b 0c 0d 0e 0f 10 12 03 02 38 50 01 00 02 0d 74
65 78 74 2f 75 72 69 2d 6c 69 73 74 00 0a 74 65
78 74 2f 70 6c 61 69 6e 01 05 61 2e 74 78 74
