crates/slopty-proto/tests/snapshots/golden__golden__client_term_drop_data.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
34 00 00 00 01 10 01 02 03 04 05 06 07 08 09 0a
0b 0c 0d 0e 0f 10 13 0d 74 65 78 74 2f 75 72 69
2d 6c 69 73 74 01 11 66 69 6c 65 3a 2f 2f 2f 77
2f 61 2e 74 78 74 0d 0a
