crates/slopty-proto/tests/snapshots/golden__golden__client_term_drop_files_gone.snap
---
source: crates/slopty-proto/tests/golden.rs
expression: hex(&bytes)
---
25 00 00 00 01 10 01 02 03 04 05 06 07 08 09 0a
0b 0c 0d 0e 0f 10 14 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 d2 a6 00
